# immich_to_tg

./: .example.env  .gitignore  .ruff.toml  README.md  docker-compose.dev.yml  docker-compose.yml
app/: Dockerfile  alembic.ini  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: b1aebd4d59a9_initial_migration.py
app/bot/: bot_client.py  check_permissions.py  check_rights.py  post_to_channel.py
app/bot/handlers/: delete_all_handler.py  discussion_forward_tracker_handler.py  error_handler.py
app/bot/handlers/setup_handlers/: album_uuid_handler.py  api_key_handler.py  cancel_handler.py  channel_name_handler.py  immich_host_handler.py  setup_handler_consts.py  setup_handlers.py  start_handler.py
app/cron_jobs/: post_media_to_channel_job.py
app/immich/: immich_client.py
app/postgres/: database.py  models.py
app/tests/: conftest.py  test_check_permissions.py  test_discussion_forward_tracker.py  test_immich_client.py  test_media_jobs.py  test_media_poster.py
app/utils/: config.py  logger.py
